# kv-wiki

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
hooks/: feature_changelog.py
skills/bootstrap/: SKILL.md  helper.py
skills/wiki-ingest/: SKILL.md  frontmatter.py  helper.py  index_generator.py  log_appender.py
skills/wiki-lint/: SKILL.md  helper.py  mirrors.py
skills/wiki-query/: SKILL.md  helper.py
templates/: .gitignore.append  .kv-wiki-features.yaml.tmpl  wiki.yaml.tmpl
templates/.claude/hooks/: file-watch.json.tmpl
templates/docs/wiki/: index.md.tmpl  log.md.tmpl
templates/docs/wiki-sources/: lessons.md.tmpl
templates/docs/wiki/architecture/: overview.md.tmpl
templates/docs/wiki/domain/: overview.md.tmpl
templates/docs/wiki/features/: overview.md.tmpl
templates/docs/wiki/gotchas/: overview.md.tmpl
templates/docs/wiki/integrations/: overview.md.tmpl
templates/docs/wiki/patterns/: overview.md.tmpl
tests/: test_feature_tracking.py  test_package.py
